k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f D:\DOCS\desktop\mpl\mpl-docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f D:\DOCS\desktop\mpl\mpl-docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mpl-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: mplpassword
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://db:5432/mpl
            - name: SPRING_DATASOURCE_USERNAME
              value: mpluser
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: deedat95/docker-spring-boot-postgres:latest
          name: app
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
