k8s/app/mpl-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mpl-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mpl-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mpl-default: "true"
